# M-Downloader

./: .gitignore  README.md  android_build_errors.txt  android_build_errors_2.txt  android_build_errors_2_utf8.txt  android_build_errors_utf8.txt  build_log_apk.txt  build_log_apk_2.txt  build_log_apk_utf8.txt  build_output.txt  build_output_11.txt  build_output_11_fix.txt  build_output_2.txt  build_stdout.txt  check_output.txt  check_output_phase2.txt  com.mobeen.mdownloader.json  mdownloader_errors.txt  mdownloader_errors_utf8.txt  mdownloader_test_errors.txt  package-lock.json  package.json  push_error.txt  push_error_ascii.txt  tsc_errors.txt  ui_build.txt  ui_build_2.txt  ui_build_errors.txt  ui_build_errors_2.txt  ui_build_errors_2_utf8.txt  ui_build_errors_utf8.txt  ui_check.txt  yt.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  build_err_actual.txt  build_err_utf8.txt  build_error.txt  build_error_final.txt  build_error_final_v2.txt  build_error_final_v3.txt  build_error_final_v4.txt  build_final_clean.txt  build_final_success.txt  build_helper_output.txt  build_helper_output_v2.txt  build_success.txt  check_error.txt  check_full.txt  check_out.txt  check_output.json  check_output.txt  check_output_final.txt  check_results.txt  com.mdownloader.app.json  conflict_log.txt  err.txt  err_grabber.txt  err_host.txt  error_final_log.txt  error_log.txt  errors.txt  errors_clean.txt  errors_final.txt  errors_final_check.txt  fetch.rs  final_check.txt  final_error.txt  final_errors.txt  full_check_errors.txt  last_error.txt  native_host.d  (+6 more)
src-tauri/src/: lib.rs  (+1 more)
(+105 files in other folders)
