[package]
name = "mdownloader"
version = "0.2.0"
description = "High-performance multi-segment download manager"
authors = ["Mobeen"]
edition = "2021"
rust-version = "1.77.2"
default-run = "mdownloader"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ── Native Messaging Host (standalone binary, no Tauri dependency) ────────
[[bin]]
name = "native_host"
path = "src/bin/native_host.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uuid = { version = "1.8", features = ["v4", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
env_logger = "0.11"
windows-sys = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Foundation"
] }

rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
m3u8-rs = "6.0"
tokio-stream = "0.1"
roxmltree = "0.20"
boa_engine = "0.20.0"
tempfile = "3.10"
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"
async-recursion = "1.1"
